# os-resource-optimizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
.github/workflows/: ci.yml
api/: history.json  status.json
docs/: README.md  whitepaper.md
src/: main.cpp
src/core/: analytics.cpp  analytics.h  hardware_simulator.cpp  hardware_simulator.h  memory_manager.cpp  memory_manager.h  process.cpp  process.h  process_manager.cpp  process_manager.h  scheduler.cpp  scheduler.h
src/utils/: random_generator.h  timer.cpp  timer.h
tests/: main.cpp
